<resources>
    <string name="app_name">Gsb</string>
    <string name="version">Version 0.5.1</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_home">Accueil</string>
    <string name="title_activity_event_details">Détails</string>
    <string name="title_activity_add_event">Ajouter un événement</string>
    <string name="Coordonees">Coordonées</string>
    <string name="Calendrier">Calendrier</string>
    <string name="Medics">Médicaments</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_agenda">Agenda</string>
    <string name="nav_coord">Coordonées</string>
    <string name="nav_cpt">Compte Rendu</string>
    <string name="nav_medic">Médicaments</string>

    <string name="nav_nav">Navigation</string>
    <string name="nav_loc">Location véhicule</string>

    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="title_activity_agenda">Agenda</string>

    <!-- Coordonées vue -->
    <string name="coord">Coordonnées</string>
    <string name="nom">Nom : </string>
    <string name="prenom">Prénom : </string>
    <string name="adresse">Adresse : </string>
    <string name="port">Port : </string>
    <string name="tel">Tel : </string>
    <string name="ville">Ville : </string>
    <string name="coeff">Coefficient : </string>
    <string name="lieux">Lieux exercice : </string>

    <!-- Compte rendue vue -->
    <string name="Cpt">Compte Rendu</string>

    <string-array name="quantity_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string name="carac">380 caractère restant</string>

    <string name="Medicaments">Médicaments</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>


</resources>
